Fixing alignments

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -50,7 +50,6 @@
 .container.fluid {
     padding: 25px 25px 25px 25px;
     background-color: #f6c453;
-    margin-top: 20px;
-    margin-left: 100px;
+    
 }
 
